--- a/index.src.html
+++ b/index.src.html
@@ -8,6 +8,7 @@ Level: 1
 Group: wicg
 Editor: Chris Cunningham, w3cid 114832, Google Inc. https://google.com/
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
+Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
 
 Abstract: This specification defines interfaces for encoding and decoding audio
 Abstract: and video. It also includes an interface for retrieving raw video
