--- a/index.src.html
+++ b/index.src.html
@@ -1,11 +1,11 @@
 <pre class='metadata'>
 Title: WebCodecs
-Repository: wicg/web-codecs
-Status: CG-DRAFT
-ED: https://wicg.github.io/web-codecs/
+Repository: w3c/web-codecs
+Status: ED
+ED: https://w3c.github.io/web-codecs/
 Shortname: web-codecs
-Level: 1
-Group: wicg
+Level: None
+Group: mediawg
 Editor: Chris Cunningham, w3cid 114832, Google Inc. https://google.com/
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
@@ -15,9 +15,9 @@ Abstract: and video. It also includes an interface for retrieving raw video
 Abstract: frames from MediaStreamStracks.
 
 Markup Shorthands:css no, markdown yes, dfn yes
-!Participate: <a href="https://github.com/wicg/web-codecs">Git Repository.</a>
-!Participate: <a href="https://github.com/wicg/web-codecs/issues/new">File an issue.</a>
-!Version History: <a href="https://github.com/wicg/web-codecs/commits">https://github.com/wicg/web-codecs/commits</a>
+!Participate: <a href="https://github.com/w3c/web-codecs">Git Repository.</a>
+!Participate: <a href="https://github.com/w3c/web-codecs/issues/new">File an issue.</a>
+!Version History: <a href="https://github.com/w3c/web-codecs/commits">https://github.com/w3c/web-codecs/commits</a>
 </pre>
 
 <pre class='anchors'>
@@ -1112,7 +1112,7 @@ Algorithms {#videoencoder-algorithms}
                 encode |output|. But, as written, it may occur that |output| was
                 encoded using a previous {{VideoEncoderConfig}} that has since
                 been replaced by a later call to {{VideoEncoder/configure()}}.
-                See [#138](https://github.com/WICG/web-codecs/issues/138).
+                See [#138](https://github.com/w3c/web-codecs/issues/138).
 
         2. Let |output_config| be a {{VideoDecoderConfig}} that describes
             |output|. Initialize |output_config| as follows:
@@ -2442,7 +2442,7 @@ This concern is mitigated by ensuring that input and output interfaces are
 immutable.
 
 ISSUE: EncodedVideoChunk and EncodedAudioChunk currently expose a mutable
-data. See <a href="https://github.com/WICG/web-codecs/issues/80">#80</a>.
+data. See <a href="https://github.com/w3c/web-codecs/issues/80">#80</a>.
 
 Privacy Considerations{#privacy-considerations}
 ===============================================
