--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -13,10 +13,10 @@ Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.
 Boilerplate: omit conformance
 
 Abstract: This registry is intended to enhance interoperability among
-    implementations and users of [[WebCodecs]]. In particular, this
+    implementations and users of [[webcodecs]]. In particular, this
     registry provides the means to identify and avoid collisions among codec
     strings and provides a mechanism to define codec-specific members of
-    [[WebCodecs]] codec configuration dictionaries.
+    [[webcodecs]] codec configuration dictionaries.
 
     This registry is not intended to include any information on whether a codec
     format is encumbered by intellectual property claims. Implementers and
@@ -34,7 +34,7 @@ Markup Shorthands:css no, markdown yes, dfn yes
 </pre>
 
 <pre class='anchors'>
-spec: web-codecs; for: WebCodecs; urlPrefix: https://wicg.github.io/web-codecs/#
+spec: web-codecs; urlPrefix: https://wicg.github.io/web-codecs/#
     type: attribute
         text: AudioDecoderConfig.description; url: dom-audiodecoderconfig-description
         text: VideoDecoderConfig.description; url: dom-videodecoderconfig-description
@@ -44,12 +44,12 @@ spec: web-codecs; for: WebCodecs; urlPrefix: https://wicg.github.io/web-codecs/#
 
 <pre class='biblio'>
 {
-  "WebCodecs": {
+  "webcodecs": {
       "href": "https://wicg.github.io/web-codecs/",
       "title": "WebCodecs",
       "publisher": "WICG"
   },
-  "AVC-REGISTRATION": {
+  "webcodecs-avc-registration": {
       "href": "https://wicg.github.io/web-codecs/avc_codec_registration.html",
       "title": "AVC (H.264) WebCodecs Registration",
       "publisher": "WICG"
@@ -62,9 +62,9 @@ Organization {#organization}
 
 This registry maintains a mapping between codec strings and definitions for (1)
 fully qualified codec string values, (2) codec-specific values for
-{{WebCodecs/VideoDecoderConfig.description}} and
-{{WebCodecs/AudioDecoderConfig.description}}, and (3) codec-specific members of
-the {{WebCodecs/VideoEncoderConfig}} and {{WebCodecs/AudioEncoderConfig}}
+{{VideoDecoderConfig.description}} and
+{{AudioDecoderConfig.description}}, and (3) codec-specific members of
+the {{VideoEncoderConfig}} and {{AudioEncoderConfig}}
 dictionaries.
 
 Registration Entry Requirements {#registration-entry-requirements}
@@ -76,10 +76,10 @@ Registration Entry Requirements {#registration-entry-requirements}
     a public specification describing how to fully qualify the variable portion
     of the string.
 3. If the described codec requires that codec-specific bytes be provided as part
-    of the {{WebCodecs/VideoDecoderConfig.description}} or the
-    {{WebCodecs/AudioDecoderConfig.description}}, the registration must link to
+    of the {{VideoDecoderConfig.description}} or the
+    {{AudioDecoderConfig.description}}, the registration must link to
     a public specification describing how to populate these fields.
-4. If the {{WebCodecs/AudioEncoderConfig}} or {{WebCodecs/VideoEncoderConfig}}
+4. If the {{AudioEncoderConfig}} or {{VideoEncoderConfig}}
     dictionaries are extended with members specific to the described codec, the
     registration must link to a public specification describing how to populate
     these fields.
@@ -157,7 +157,7 @@ ISSUE: Several registrations contain TODOs which should be replaced with links
   <tr>
     <td>avc1.*</td>
     <td>AVC / H.264</td>
-    <td>[AVC (H.264) WebCodecs Registration](avc_codec_registration.html) [[AVC-REGISTRATION]]</td>
+    <td>[AVC (H.264) WebCodecs Registration](avc_codec_registration.html) [[webcodecs-avc-registration]]</td>
   </tr>
   <tr>
     <td>vp8</td>
