--- a/index.src.html
+++ b/index.src.html
@@ -3,7 +3,7 @@ Title: WebCodecs
 Repository: wicg/web-codecs
 Status: CG-DRAFT
 ED: https://wicg.github.io/web-codecs/
-Shortname: web-codecs
+Shortname: webcodecs
 Level: 1
 Group: wicg
 Editor: Chris Cunningham, w3cid 114832, Google Inc. https://google.com/
