Use UPPER CASE for WC biblio refs

--- a/avc_codec_registration.src.html
+++ b/avc_codec_registration.src.html
@@ -2,7 +2,7 @@
 Title: AVC (H.264) WebCodecs Registration
 Repository: wicg/web-codecs
 Status: CG-DRAFT
-Shortname: web-codecs-avc-codec-registration
+Shortname: webcodecs-avc-codec-registration
 Level: none
 Group: wicg
 ED: none
@@ -44,12 +44,12 @@ spec: webcodecs; urlPrefix: https://wicg.github.io/web-codecs/#
 
 <pre class='biblio'>
 {
-  "webcodecs": {
+  "WEBCODECS": {
       "href": "https://wicg.github.io/web-codecs/",
       "title": "WebCodecs",
       "publisher": "WICG"
   },
-  "webcodecs-codec-registry": {
+  "WEBCODECS-CODEC-REGISTRY": {
       "href": "https://wicg.github.io/web-codecs/codec_registry.html",
       "title": "WebCodecs Codec Registry",
       "publisher": "WICG"
@@ -81,11 +81,11 @@ A {{VideoDecoderConfig.description}} may or may not be required by the
 AVC codec depending on the bitstream format of the AVC content to be decoded.
 
 If the {{VideoDecoderConfig.description}} includes an
-`AVCDecoderConfigurationRecord`, as defined by [[iso14496-15]], section 5.3.3.1,
-it will be assumed that the bitstream is in "avc" format.
+`AVCDecoderConfigurationRecord`, as defined by [[iso14496-15]], section
+5.3.3.1, it will be assumed that the bitstream is in "avc" format.
 
-NOTE: This format is commonly used in .MP4 files, where the player generally has
-    random access to the media data.
+NOTE: This format is commonly used in .MP4 files, where the player generally
+    has random access to the media data.
 
 If the {{VideoDecoderConfig.description}} is not provided, it will be
 assumed that the bitstream is in “annexb” format.
