--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -2,7 +2,7 @@
 Title: WebCodecs Codec Registry
 Repository: wicg/web-codecs
 Status: CG-DRAFT
-Shortname: web-codecs-codec-registry
+Shortname: webcodecs-codec-registry
 Level: none
 Group: wicg
 ED: none
@@ -44,12 +44,12 @@ spec: web-codecs; urlPrefix: https://wicg.github.io/web-codecs/#
 
 <pre class='biblio'>
 {
-  "webcodecs": {
+  "WEBCODECS": {
       "href": "https://wicg.github.io/web-codecs/",
       "title": "WebCodecs",
       "publisher": "WICG"
   },
-  "webcodecs-avc-registration": {
+  "WEBCODECS-AVC-REGISTRATION": {
       "href": "https://wicg.github.io/web-codecs/avc_codec_registration.html",
       "title": "AVC (H.264) WebCodecs Registration",
       "publisher": "WICG"
@@ -157,7 +157,7 @@ ISSUE: Several registrations contain TODOs which should be replaced with links
   <tr>
     <td>avc1.*</td>
     <td>AVC / H.264</td>
-    <td>[AVC (H.264) WebCodecs Registration](avc_codec_registration.html) [[webcodecs-avc-registration]]</td>
+    <td>[AVC (H.264) WebCodecs Registration](avc_codec_registration.html) [[WEBCODECS-AVC-REGISTRATION]]</td>
   </tr>
   <tr>
     <td>vp8</td>
