--- a/index.src.html
+++ b/index.src.html
@@ -72,7 +72,7 @@ spec: media-capabilities; urlPrefix: https://w3c.github.io/media-capabilities/#
 
 <pre class='biblio'>
 {
-  "CODEC-REGISTRY": {
+  "WEBCODECS-CODEC-REGISTRY": {
       "href": "https://wicg.github.io/web-codecs/codec_registry.html",
       "title": "WebCodecs Codec Registry",
       "publisher": "WICG"
@@ -1140,7 +1140,7 @@ Algorithms {#videoencoder-algorithms}
                     {{VideoDecoderConfig/description}} to describe codec
                     specific "extradata", the use of which may be further
                     described in codec registrations listed in the
-                    [[CODEC-REGISTRY]].
+                    [[WEBCODECS-CODEC-REGISTRY]].
         3. If |output_config| and {{VideoEncoder/[[active output config]]}} are
             <a>equal dictionaries</a>, set |output_config| to null. Otherwise,
             set {{VideoEncoder/[[active output config]]}} to |output_config|.
@@ -1342,7 +1342,7 @@ NOTE: In other media specifications, codec strings historically accompanied a
     hence, only the value of the codecs parameter is accepted.
 
 The format and semantics for codec strings are defined by codec registrations
-listed in the [[CODEC-REGISTRY]]. A compliant implementation may support any
+listed in the [[WEBCODECS-CODEC-REGISTRY]]. A compliant implementation may support any
 combination of codec registrations or none at all.
 
 AudioDecoderConfig{#audio-decoder-config}
@@ -1377,7 +1377,7 @@ To check if an {{AudioDecoderConfig}} is a <dfn>valid AudioDecoderConfig</dfn>,
   <dd>
     A sequence of codec specific bytes, commonly known as extradata.
 
-    NOTE: The registrations in the [[CODEC-REGISTRY]] describe whether/how to
+    NOTE: The registrations in the [[WEBCODECS-CODEC-REGISTRY]] describe whether/how to
         populate this sequence, corresponding to the provided
         {{AudioDecoderConfig/codec}}.
   </dd>
@@ -1428,7 +1428,7 @@ run these steps:
   <dd>
     A sequence of codec specific bytes, commonly known as extradata.
 
-    NOTE: The registrations in the [[CODEC-REGISTRY]] may describe whether/how
+    NOTE: The registrations in the [[WEBCODECS-CODEC-REGISTRY]] may describe whether/how
         to populate this sequence, corresponding to the provided
         {{VideoDecoderConfig/codec}}.
   </dd>
@@ -1502,7 +1502,7 @@ dictionary AudioEncoderConfig {
 </pre>
 
 NOTE: Codec-specific extensions to {{AudioEncoderConfig}} may be defined by the
-    registrations in the [[CODEC-REGISTRY]].
+    registrations in the [[WEBCODECS-CODEC-REGISTRY]].
 
 To check if an {{AudioEncoderConfig}} is a <dfn>valid AudioEncoderConfig</dfn>,
 run these steps:
@@ -1539,7 +1539,7 @@ dictionary VideoEncoderConfig {
 </pre>
 
 NOTE: Codec-specific extensions to {{VideoEncoderConfig}} may be defined by the
-    registrations in the [[CODEC-REGISTRY]].
+    registrations in the [[WEBCODECS-CODEC-REGISTRY]].
 
 To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
     run these steps:
