Add missing dfn for ImageDecoderInit.preferAnimation

--- a/index.src.html
+++ b/index.src.html
@@ -3022,6 +3022,12 @@ string=] and for which the `type`, per Section 3.1.1.1 of [[RFC7231]], is
     effort; decoding to a desired height may not be supported by all
     formats/decoders.
 
+: <dfn dict-member for=ImageDecoderInit>preferAnimation</dfn>
+:: For images with multiple tracks, this indicates whether the
+    initial track selection should prefer an animated track.
+
+    NOTE: See the [=ImageDecoder/Get Default Selected Track Index=] algorithm.
+
 ImageDecodeOptions Interface {#imagedecodeoptions-interface}
 ------------------------------------------------------------
 <pre class='idl'>
