Adjust repo name to "webcodecs"
This update drops the hyphen as discussed in:
https://github.com/WICG/web-codecs/pull/149#discussion_r595407472

It also updates the new registry files following rebase.

--- a/index.src.html
+++ b/index.src.html
@@ -1,9 +1,9 @@
 <pre class='metadata'>
 Title: WebCodecs
-Repository: w3c/web-codecs
+Repository: w3c/webcodecs
 Status: ED
-ED: https://w3c.github.io/web-codecs/
-Shortname: web-codecs
+ED: https://w3c.github.io/webcodecs/
+Shortname: webcodecs
 Level: None
 Group: mediawg
 Editor: Chris Cunningham, w3cid 114832, Google Inc. https://google.com/
@@ -20,9 +20,9 @@ Abstract: This specification defines interfaces to codecs for encoding and
     codecs or none at all.
 
 Markup Shorthands:css no, markdown yes, dfn yes
-!Participate: <a href="https://github.com/w3c/web-codecs">Git Repository.</a>
-!Participate: <a href="https://github.com/w3c/web-codecs/issues/new">File an issue.</a>
-!Version History: <a href="https://github.com/w3c/web-codecs/commits">https://github.com/w3c/web-codecs/commits</a>
+!Participate: <a href="https://github.com/w3c/webcodecs">Git Repository.</a>
+!Participate: <a href="https://github.com/w3c/webcodecs/issues/new">File an issue.</a>
+!Version History: <a href="https://github.com/w3c/webcodecs/commits">https://github.com/w3c/webcodecs/commits</a>
 </pre>
 
 <pre class='anchors'>
@@ -73,7 +73,7 @@ spec: media-capabilities; urlPrefix: https://w3c.github.io/media-capabilities/#
 <pre class='biblio'>
 {
   "WEBCODECS-CODEC-REGISTRY": {
-      "href": "https://wicg.github.io/web-codecs/codec_registry.html",
+      "href": "https://wicg.github.io/webcodecs/codec_registry.html",
       "title": "WebCodecs Codec Registry",
       "publisher": "WICG"
   }
@@ -1119,7 +1119,7 @@ Algorithms {#videoencoder-algorithms}
                 encode |output|. But, as written, it may occur that |output| was
                 encoded using a previous {{VideoEncoderConfig}} that has since
                 been replaced by a later call to {{VideoEncoder/configure()}}.
-                See [#138](https://github.com/w3c/web-codecs/issues/138).
+                See [#138](https://github.com/w3c/webcodecs/issues/138).
 
         2. Let |output_config| be a {{VideoDecoderConfig}} that describes
             |output|. Initialize |output_config| as follows:
@@ -2360,7 +2360,7 @@ This concern is mitigated by ensuring that input and output interfaces are
 immutable.
 
 ISSUE: EncodedVideoChunk and EncodedAudioChunk currently expose a mutable
-data. See <a href="https://github.com/w3c/web-codecs/issues/80">#80</a>.
+data. See <a href="https://github.com/w3c/webcodecs/issues/80">#80</a>.
 
 Privacy Considerations{#privacy-considerations}
 ===============================================
