--- a/avc_codec_registration.src.html
+++ b/avc_codec_registration.src.html
@@ -1,10 +1,10 @@
 <pre class='metadata'>
 Title: AVC (H.264) WebCodecs Registration
-Repository: wicg/web-codecs
-Status: CG-DRAFT
+Repository: w3c/webcodecs
+Status: ED
 Shortname: webcodecs-avc-codec-registration
 Level: none
-Group: wicg
+Group: mediawg
 ED: none
 Editor: Chris Cunningham, w3cid 114832, Google Inc. https://google.com/
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
@@ -25,9 +25,9 @@ Abstract: This registration is entered into the [[webcodecs-codec-registry]].
     This registration is non-normative.
 
 Markup Shorthands:css no, markdown yes, dfn yes
-!Participate: <a href="https://github.com/wicg/web-codecs">Git Repository.</a>
-!Participate: <a href="https://github.com/wicg/web-codecs/issues/new">File an issue.</a>
-!Version History: <a href="https://github.com/wicg/web-codecs/commits">https://github.com/wicg/web-codecs/commits</a>
+!Participate: <a href="https://github.com/w3c/webcodecs">Git Repository.</a>
+!Participate: <a href="https://github.com/w3c/webcodecs/issues/new">File an issue.</a>
+!Version History: <a href="https://github.com/w3c/webcodecs/commits">https://github.com/w3c/webcodecs/commits</a>
 </pre>
 
 <pre class='anchors'>
