--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -1,10 +1,10 @@
 <pre class='metadata'>
 Title: WebCodecs Codec Registry
-Repository: wicg/web-codecs
-Status: CG-DRAFT
+Repository: w3c/webcodecs
+Status: ED
 Shortname: webcodecs-codec-registry
 Level: none
-Group: wicg
+Group: mediawg
 ED: none
 Editor: Chris Cunningham, w3cid 114832, Google Inc. https://google.com/
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
@@ -28,9 +28,9 @@ Abstract: This registry is intended to enhance interoperability among
     This registry is non-normative.
 
 Markup Shorthands:css no, markdown yes, dfn yes
-!Participate: <a href="https://github.com/wicg/web-codecs">Git Repository.</a>
-!Participate: <a href="https://github.com/wicg/web-codecs/issues/new">File an issue.</a>
-!Version History: <a href="https://github.com/wicg/web-codecs/commits">https://github.com/wicg/web-codecs/commits</a>
+!Participate: <a href="https://github.com/w3c/webcodecs">Git Repository.</a>
+!Participate: <a href="https://github.com/w3c/webcodecs/issues/new">File an issue.</a>
+!Version History: <a href="https://github.com/w3c/webcodecs/commits">https://github.com/w3c/webcodecs/commits</a>
 </pre>
 
 <pre class='anchors'>
@@ -84,7 +84,7 @@ Registration Entry Requirements {#registration-entry-requirements}
     registration must link to a public specification describing how to populate
     these fields.
 4. Candidate entries must be announced by filing an issue in the
-    [WebCodecs GitHub issue tracker](https://github.com/wicg/web-codecs/issues/)
+    [WebCodecs GitHub issue tracker](https://github.com/w3c/webcodecs/issues/)
     so they can be discussed and evaluated for compliance before being added to
     the registry.
 
