--- a/avc_codec_registration.src.html
+++ b/avc_codec_registration.src.html
@@ -5,11 +5,13 @@ Status: ED
 Shortname: webcodecs-avc-codec-registration
 Level: none
 Group: mediawg
-ED: none
+ED: https://w3c.github.io/webcodecs/avc_codec_registration.html
 Editor: Chris Cunningham, w3cid 114832, Google Inc. https://google.com/
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
+
 Boilerplate: omit conformance
+Text macro: NOTE yes
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
     It describes, for AVC (H.264), the (1) fully qualified codec strings, (2)
