--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -5,12 +5,13 @@ Status: ED
 Shortname: webcodecs-codec-registry
 Level: none
 Group: mediawg
-ED: none
+ED: https://w3c.github.io/webcodecs/codec_registry.html
 Editor: Chris Cunningham, w3cid 114832, Google Inc. https://google.com/
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
 
 Boilerplate: omit conformance
+Text macro: NOTE yes
 
 Abstract: This registry is intended to enhance interoperability among
     implementations and users of [[webcodecs]]. In particular, this
