Migrate spec to Media WG (#150)
This update adjusts the metadata of the spec as it gets adopted by the Media
Working Group, and makes the following changes:

- Update CONTRIBUTING.md to match that used in W3C
- Update LICENSE.md to drop the CLA part
- Update links in README.md and to mention Media WG
- Update w3c.json
- Update status, group, and links that currently target the WICG repo in the
spec itself

Also note the switch to `Level: None` in the metadata of the spec as I suspect
that the group will publish the API without any level, at least initially.

This update also drops the hyphen in `web-codecs` as discussed in:
https://github.com/WICG/web-codecs/pull/149#discussion_r595407472

The default boilerplate for the Status of This Document section of the Media WG
asserts that the specs are intended to be published as W3C Recommendations. The
text needs to be adjusted for drafts that are intended to be published as W3C
Working Group Notes.

There is no specific way to flag the targeted spec status in Bikeshed. The idea
is thus to add a `Text macro: NOTE yes` macro definition in the spec metadata
and conditionals in the boilerplate files to issue the right text.

The updates to the boilerplate files are at:
https://github.com/tabatkins/bikeshed/pull/1999

Privacy and Security Consideration sections have also been added to registry
notes that targets the relevants sections in the main WebCodecs spec.

--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -1,22 +1,23 @@
 <pre class='metadata'>
 Title: WebCodecs Codec Registry
-Repository: wicg/web-codecs
-Status: CG-DRAFT
+Repository: w3c/webcodecs
+Status: ED
 Shortname: webcodecs-codec-registry
 Level: none
-Group: wicg
-ED: none
+Group: mediawg
+ED: https://w3c.github.io/webcodecs/codec_registry.html
 Editor: Chris Cunningham, w3cid 114832, Google Inc. https://google.com/
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
 
 Boilerplate: omit conformance
+Text macro: NOTE yes
 
 Abstract: This registry is intended to enhance interoperability among
-    implementations and users of [[webcodecs]]. In particular, this
+    implementations and users of [[WEBCODECS]]. In particular, this
     registry provides the means to identify and avoid collisions among codec
     strings and provides a mechanism to define codec-specific members of
-    [[webcodecs]] codec configuration dictionaries.
+    [[WEBCODECS]] codec configuration dictionaries.
 
     This registry is not intended to include any information on whether a codec
     format is encumbered by intellectual property claims. Implementers and
@@ -28,13 +29,13 @@ Abstract: This registry is intended to enhance interoperability among
     This registry is non-normative.
 
 Markup Shorthands:css no, markdown yes, dfn yes
-!Participate: <a href="https://github.com/wicg/web-codecs">Git Repository.</a>
-!Participate: <a href="https://github.com/wicg/web-codecs/issues/new">File an issue.</a>
-!Version History: <a href="https://github.com/wicg/web-codecs/commits">https://github.com/wicg/web-codecs/commits</a>
+!Participate: <a href="https://github.com/w3c/webcodecs">Git Repository.</a>
+!Participate: <a href="https://github.com/w3c/webcodecs/issues/new">File an issue.</a>
+!Version History: <a href="https://github.com/w3c/webcodecs/commits">https://github.com/w3c/webcodecs/commits</a>
 </pre>
 
 <pre class='anchors'>
-spec: web-codecs; urlPrefix: https://wicg.github.io/web-codecs/#
+spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
     type: attribute
         text: AudioDecoderConfig.description; url: dom-audiodecoderconfig-description
         text: VideoDecoderConfig.description; url: dom-videodecoderconfig-description
@@ -45,14 +46,14 @@ spec: web-codecs; urlPrefix: https://wicg.github.io/web-codecs/#
 <pre class='biblio'>
 {
   "WEBCODECS": {
-      "href": "https://wicg.github.io/web-codecs/",
+      "href": "https://w3c.github.io/webcodecs/",
       "title": "WebCodecs",
-      "publisher": "WICG"
+      "publisher": "W3C"
   },
   "WEBCODECS-AVC-REGISTRATION": {
-      "href": "https://wicg.github.io/web-codecs/avc_codec_registration.html",
+      "href": "https://w3c.github.io/webcodecs/avc_codec_registration.html",
       "title": "AVC (H.264) WebCodecs Registration",
-      "publisher": "WICG"
+      "publisher": "W3C"
   }
 }
 </pre>
@@ -84,7 +85,7 @@ Registration Entry Requirements {#registration-entry-requirements}
     registration must link to a public specification describing how to populate
     these fields.
 4. Candidate entries must be announced by filing an issue in the
-    [WebCodecs GitHub issue tracker](https://github.com/wicg/web-codecs/issues/)
+    [WebCodecs GitHub issue tracker](https://github.com/w3c/webcodecs/issues/)
     so they can be discussed and evaluated for compliance before being added to
     the registry.
 
@@ -170,3 +171,10 @@ ISSUE: Several registrations contain TODOs which should be replaced with links
     <td>TODO (string)</td>
   </tr>
 </table>
+
+Privacy and Security Considerations {#privacy-and-security-considerations}
+==========================================================================
+
+Please refer to the [[WEBCODECS#privacy-considerations|Privacy Considerations]]
+and [[WEBCODECS#security-considerations|Security Considerations]] sections in
+[[WEBCODECS]].
