--- a/avc_codec_registration.src.html
+++ b/avc_codec_registration.src.html
@@ -1,15 +1,17 @@
 <pre class='metadata'>
 Title: AVC (H.264) WebCodecs Registration
-Repository: wicg/web-codecs
-Status: CG-DRAFT
+Repository: w3c/webcodecs
+Status: ED
 Shortname: webcodecs-avc-codec-registration
 Level: none
-Group: wicg
-ED: none
+Group: mediawg
+ED: https://w3c.github.io/webcodecs/avc_codec_registration.html
 Editor: Chris Cunningham, w3cid 114832, Google Inc. https://google.com/
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
+
 Boilerplate: omit conformance
+Text macro: NOTE yes
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
     It describes, for AVC (H.264), the (1) fully qualified codec strings, (2)
@@ -25,13 +27,13 @@ Abstract: This registration is entered into the [[webcodecs-codec-registry]].
     This registration is non-normative.
 
 Markup Shorthands:css no, markdown yes, dfn yes
-!Participate: <a href="https://github.com/wicg/web-codecs">Git Repository.</a>
-!Participate: <a href="https://github.com/wicg/web-codecs/issues/new">File an issue.</a>
-!Version History: <a href="https://github.com/wicg/web-codecs/commits">https://github.com/wicg/web-codecs/commits</a>
+!Participate: <a href="https://github.com/w3c/webcodecs">Git Repository.</a>
+!Participate: <a href="https://github.com/w3c/webcodecs/issues/new">File an issue.</a>
+!Version History: <a href="https://github.com/w3c/webcodecs/commits">https://github.com/w3c/webcodecs/commits</a>
 </pre>
 
 <pre class='anchors'>
-spec: webcodecs; urlPrefix: https://wicg.github.io/web-codecs/#
+spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
     type: attribute
         text: VideoDecoderConfig.description; url: dom-videodecoderconfig-description
     type: interface
@@ -45,14 +47,14 @@ spec: webcodecs; urlPrefix: https://wicg.github.io/web-codecs/#
 <pre class='biblio'>
 {
   "WEBCODECS": {
-      "href": "https://wicg.github.io/web-codecs/",
+      "href": "https://w3c.github.io/webcodecs/",
       "title": "WebCodecs",
-      "publisher": "WICG"
+      "publisher": "W3C"
   },
   "WEBCODECS-CODEC-REGISTRY": {
-      "href": "https://wicg.github.io/web-codecs/codec_registry.html",
+      "href": "https://w3c.github.io/webcodecs/codec_registry.html",
       "title": "WebCodecs Codec Registry",
-      "publisher": "WICG"
+      "publisher": "W3C"
   },
   "ITU-T-REC-H.264": {
     "href": "https://www.itu.int/rec/T-REC-H.264",
@@ -171,3 +173,10 @@ SPS and PPS are described in greater detail in sections G.3.41 and G.3.55 of
         section 5.3.3.1. This format is commonly used in .MP4 files, where the
         player generally has random access to the media data.
 </dl>
+
+Privacy and Security Considerations {#privacy-and-security-considerations}
+==========================================================================
+
+Please refer to the [[WEBCODECS#privacy-considerations|Privacy Considerations]]
+and [[WEBCODECS#security-considerations|Security Considerations]] sections in
+[[WEBCODECS]].
